deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atomix-sidecar-injector-svc
  labels:
    app: atomix-sidecar-injector
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: atomix-sidecar-injector
